Update and rename kap123.txt to kap123.md

--- a/kap123.md
+++ b/kap123.md
@@ -1,8 +1,7 @@
 # Kap 1 
 ## Entreprenörer
+### Nyckelord - Entreprenörer, Företag, Egenföreatagare.
 Entreprenörer är personer som driver fram uppfinningar och nyskapande. Sjösätter sina ideer till verklighet, detta skiljer entreprenörer från vanliga personer.
-
-nyckelord - Entreprenörer, Företag, Egenföreatagare.
 
 Kap 2 - Affärsiden - Grundläggande för att göra sitt företag synligt bland konkurrensen. 
         Skillnad mellan framgång och misslycka, är affärsiden.
