--- a/kap123.md
+++ b/kap123.md
@@ -2,21 +2,64 @@
 ## Handlar om entreprenörer
 ### Entreprenörer, Företag, Egenföreatagare.
 ### Sid 5, 8 LÄS SAMMANFATTNINGEN
-        Entreprenörer är personer som driver fram uppfinningar och nyskapande. 
-        Sjösätter sina ideer till verklighet, detta skiljer entreprenörer från vanliga personer.
+Entreprenörer är personer som driver fram uppfinningar och nyskapande. 
+
+Sjösätter sina ideer till verklighet, detta skiljer entreprenörer från vanliga personer.
+
+Frågor:
+        
+        1. Varför lyckas vissa entreprenörer med sina ideer medan andra misslyckas?
 
 #  Kap 2 - Affärside
 ## Affärsiden är grunden till ett företag
 ### Affärside, Franschising, marknadsbehov.
 ### Sid 12, 15 LÄS SAMMANFATTNINGEN
-        Grundläggande för att göra sitt företag synligt bland konkurrensen. 
-        Skillnad mellan framgång och misslycka, är affärsiden.
-        Viktigt att få med vilket marknads behov företaget fyller. 
-        Affärsiden är viktig för personalen och cheferna, den fungerar som en kompass som visar vad företaget strävar efter.
-        Affärsiden är i ständig utveckling, 
+Grundläggande för att göra sitt företag synligt bland konkurrensen. 
 
-Kap 2 - Affärsiden - 
+Skillnad mellan framgång och misslycka, är affärsiden.
 
-nyckelord -
+Viktigt att få med vilket marknads behov företaget fyller. 
 
+Affärsiden är viktig för personalen och cheferna, den fungerar som en kompass som visar vad företaget strävar efter.
+
+Affärsiden är i ständig utveckling, 
+
+Frågor:
+        
+        1. Borde det bli lättare att starta företag i Sverige?
+        
+
+#  Kap 3 - Starta eget företag
+## Eget företag, ett stort steg.
+### Risktagande, Affärsplan
+### Sid 12, 15 LÄS SAMMANFATTNINGEN
+Mindre trygghet än en anställning.
+
+Affärsplanen förebygger att företaget misslyckas, medför en röd tråd till företaget att gå efter.
+
+Affärsplan är en bra grund för ett företag att bygga vidare på.
+
+Kapital behov är: Eget kapital - Eventuella bidrag = Lånebehov
+
+Finansiering i ett företag kan se olika ut, se Carinas PP för mer info.
+
+Viktigt att registrera företaget och få det godkännt att betala företags skatt, F-Skatt.
+
+Näringsfrihetens krav:
+
+        -Du måste vara minst 18 år och bosatt i sverige.
+        
+        -Ej försatt i konkurs.
+        
+        -Särskilda krav gäller för vissa områden.
+
+Frågor:
+        
+        1. Borde det bli lättare att starta företag i Sverige?
+        
+        2. Varför behövs en affärsplan?
+        
+        3. Var finns de nya entreprenörerna?
+        
+        
 
